   - similar to previous versions (spreadsheet like editor) supporting attribute types: text, checkbox, radio.
   - tabbed panel for region and file attribute editor
 * via project save/load
   - everything (annotations, attributes, application settings, etc) can now be saved as a VIA project (a json file)
 * exported csv annotation header line does not contain "#" (this may be a breaking change)
 * VIA project: open/save
   - image file list can be filtered using regular expression
   - preset filters for image file list
   - shortcuts to add files to project (local, url) and remove files from project

## [1.0.5] - January 16, 2017
 * (code contributions from Stefan Mihaila) via.js codebase improvement, wider web browser support (IE 10, IE 11 and Opera 12)
 * added Contributors.md file to record contributions to VIA codebase
 * removed 'localStorage.clear()' to avoid SecurityError in Safari browser (issue 85 and 108)

## [1.0.4] - October 17, 2017
 * fixed polygon copy/paste/resize issue (issue 107)

## [1.0.3] - August 07, 2017
 * CSV export now does not add extra comma to each line (issue 103)

## [1.0.2] - August 04, 2017
 * removed free resize of ellipse from any edge (issue 100)
 * fixed free resize of rectangle (issue 101)
 * fixed 1-pixel bug (first set image space coordinate, then set canvas coordinate. see issue 96) for region resize and move
 * press Ctrl while resizing to preserve the aspect ratio of rectangle (issue 98)
 * fixed issue with CSV files containing newline character \r or \r\n (issue 102)
 * top menu bar remains consistent event when the user scrolls the window

## [1.0.1] - June 11, 2017
 * fixed issue 33 : Annotations cannot be imported from file of type application/vnd.ms-excel
 * fixed issue 96 : A major bug in how canvas coordinates are computed

## [1.0.0] - April 04, 2017
 * file-attributes support added (useful for weakly supervised learning)
 * spreadsheet like editor for region and file attributes