@@ -416,14 +416,11 @@
             </div>
           </div>
           <div id="img_fn_list"></div>
-          <p style="text-align:center">
+          <p>
             <div class="button_panel">
-              <span class="button" onclick="sel_local_images()" title="Add new file from local disk">&plus;f</span>
-              <span class="button" onclick="project_file_add_url_with_input()" title="Add new file using URL">&plus;u</span>
-              <span style="margin-left:1rem" class="button" onclick="project_file_remove_with_confirm()" title="Remove selected file (i.e. file currently being shown) from project">&times;</span>
-              <!--
-              <span style="margin-left:1rem" class="button" onclick="" title="Project settings">&lowast;</span>
-              -->
+              <span class="button" onclick="sel_local_images()" title="Add new file from local disk">Add Files</span>
+              <span class="button" onclick="project_file_add_url_with_input()" title="Add new file using URL">Add URL</span>
+              <span class="button" onclick="project_file_remove_with_confirm()" title="Remove selected file (i.e. file currently being shown) from project">Remove</span>
             </div>
           </p>
         </div>
@@ -511,8 +508,8 @@
       <!-- Main display area: contains image canvas, ... -->
       <div id="display_area">
         <div id="canvas_panel">
-          <canvas id="image_canvas"></canvas>
-          <canvas id="region_canvas" tabindex="1">Sorry, your browser does not support HTML5 Canvas functionality which is required for this application.</canvas>
+          <canvas id="image_canvas" width="1" height="1"></canvas>
+          <canvas id="region_canvas" width="1" height="1" tabindex="1">Sorry, your browser does not support HTML5 Canvas functionality which is required for this application.</canvas>
         </div>
 
         <div>
